--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "onile",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +17,9 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.3",
     "validator": "^13.11.0"
   }
 }
